--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>.:: TecnoBrain ::.</title>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/RamonMartins/ramonmartins.github.io/master/style.css"/>
     </head>
     <body>
         <div class="titulo">
@@ -30,7 +30,7 @@
         
         
     </body>
-    <script type='text/javascript' src='mosquitto.js'></script>
-    <script type='text/javascript' src='jquery-1.7.2.min.js'></script>
-    <script type="text/javascript" src="tmo.js"></script>
+    <script type='text/javascript' src='https://raw.githubusercontent.com/RamonMartins/ramonmartins.github.io/master/mosquitto.js'></script>
+    <script type='text/javascript' src='https://raw.githubusercontent.com/RamonMartins/ramonmartins.github.io/master/jquery-1.7.2.min.js'></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/RamonMartins/ramonmartins.github.io/master/tmo.js"></script>
 </html>
