--- a/painel_estudante.htm
+++ b/painel_estudante.htm
@@ -85,11 +85,11 @@ var myThemeOfficeBase='/sigaa/faces/myFacesExtensionResource/org.apache.myfaces.
 		<div id="info-usuario">
 
 		<p class="periodo-atual">
-					Semestre atual: <strong>2024.1</strong>
+					Semestre atual: <strong id="info_semestre"></strong>
 		</p>
 
 		<p class="usuario">
-			<span class="nome-user-trocar">RAMON MARTINS FERREIRA</span>
+			<span class="info_nome"></span>
 			
 			
 				<i>
@@ -101,7 +101,7 @@ var myThemeOfficeBase='/sigaa/faces/myFacesExtensionResource/org.apache.myfaces.
 		</p>
 
 		<p class="unidade">
-			CENTRO DE CIENCIAS HUMANAS E LETRAS
+			<span id="info_predio"></span>
 			 (11.00.25)
 			
 		</p>
@@ -168,7 +168,7 @@ var myThemeOfficeBase='/sigaa/faces/myFacesExtensionResource/org.apache.myfaces.
 			</div>
 			<p class="info-docente">
 			
-				<span> <b><small class="nome-user-trocar">RAMON MARTINS FERREIRA</small></b> </span>
+				<span> <b><small class="info_nome"></small></b> </span>
 			</p>
 			<div id="agenda-docente" style="text-align: center">
 				 
@@ -188,12 +188,12 @@ var myThemeOfficeBase='/sigaa/faces/myFacesExtensionResource/org.apache.myfaces.
 				<table>
 					<tbody><tr>
 						<td> Matrícula: </td>
-						<td> 2024635257 </td>
+						<td> <span id="info_matricula"></span> </td>
 					</tr>
 					
 					<tr>
 						<td> Curso: </td>
-						<td> CCHL - <span id="curso-user-trocar">CIÊNCIAS ECONÔMICAS</span> - Presencial - Teresina  </td>
+						<td><span id="info_curso"></span> - Presencial - Teresina  </td>
 					</tr>
 					<tr>
 						<td> Turno: </td>
@@ -211,12 +211,12 @@ var myThemeOfficeBase='/sigaa/faces/myFacesExtensionResource/org.apache.myfaces.
 					<tr>
 						<td> E-Mail: </td>
 						<td>
-							ramon-bac@hotm...
+							<span id="info_email"></span>
 						</td>
 					</tr>
 					<tr>
 						<td> Entrada: </td>
-						<td> 2024.1</td>
+						<td> <span id="info_entrada"></span>.1</td>
 					</tr>
 						<tr>
 							<td colspan="2">&nbsp;</td>
