--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
                 </div>
             </form>
 
+            <div class="campos">
+                <span>Foto de perfil</span>
+                <input type="file" id="info_foto" accept="image/*" class="inputs">
+            </div>
+
             <div class="btns">
                 <button onclick="ResetarCampos()">Limpar campos</button>
                 <button onclick="EnviarDados()">Enviar Dados</button>
@@ -45,7 +50,7 @@
         </div>
 
         <footer class="rodape">
-            version 0.8 - Alpha
+            Version 1.0
         </footer>
         
     </body>
